event alignment issue fixed

--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -3733,7 +3733,8 @@ width: 100%;
       width:100%;
     }
     .event-wrapper__sub{
-        margin: 15px auto;
+        // margin: 15px auto;
+        margin: 15px -1px ;
         @media #{$mobile-only} {
           margin: 10px 0 15px;
         }
